# FortArray

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
include/: fortarray.h
